[metadata]
name = firebmail
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = fireportf.herokuapp.com
author = Lord Firebreather
author_email = lordfirebcorps@gmail.com
license = BSD-3-Clause # Example license
classifiers =
environment :: Web Environment
intended Audience :: Developers
operating System :: OS Independent
programming Language :: Python
topic :: Internet :: WWW/HTTP
[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    dotenv >= X.Y # Replace "X.Y" as appropriate